K3S/tools/registry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry-svc
  namespace: registry-system
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
      name: docker-registry
